# ros_camera

./: CMakeLists.txt  README.md  package.xml
config/: camera1.yaml  camera2.yaml
include/ros_camera_rig/: camera_handler.h  camera_rig.h  image_handler.h  ogre_oculus.h  ogre_view.h  usefull.h
include/ros_camera_rig/impl/: point_cloud2_iterator.h
launch/: demo_oculus.launch  demo_pointcloud.launch  gdb_demo_pointcloud.launch
ogre_material/: glsl120.program  mesh.material  oculus.compositor  warp.frag  warp.material  warp.vert  warpWithChromeAb.frag
sample/: demo_oculus.cpp  demo_spherical_panorama.cpp  demo_spherical_pointcould.cpp
src/: camera_handler.cpp  camera_rig.cpp  image_handler.cpp  ogre_oculus.cpp  ogre_view.cpp  usefull.cpp
