<?xml version="1.0"?>
<package>
  <name>ros_camera_rig</name>
  <version>0.0.0</version>
  <description>The ros_camera_rig package</description>

  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>BSD</license>

  <url type="git">??</url>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>ros_img_sync</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>OculusSDK</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>ros_img_sync</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>OculusSDK</run_depend>

</package>
